deploy/weatherapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weatherapi
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "weatherapi.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: weatherapi
            port:
              number: 80
